second url  commit

--- a/src/bookmarks.html
+++ b/src/bookmarks.html
@@ -170,7 +170,7 @@ body.dark-mode .undo-button:hover {
                 </div>
                 <h1 class="site-title">Mes Favoris</h1>
                 <div class="header-icons">
-                    <button class="back-button" href="http://localhost:5173/src/app.html">
+                    <button class="back-button" href="https://bioterms.space/src/app.html">
                         <i class="fa-light fa-arrow-left"></i>
                     </button>
                 </div>
