--- a/src/forgot-password.html
+++ b/src/forgot-password.html
@@ -101,7 +101,7 @@
         try {
             // هنا كنصيفطو طلب إعادة التعيين
             // الرابط لي غادي يوصل للمستخدم هو ديال الصفحة reset.html
-            await account.createRecovery(email, 'http://localhost:5173/src/reset.html');
+            await account.createRecovery(email, 'https://bioterms.space/reset.html');
             statusDiv.style.color = 'green';
             statusDiv.textContent = "Succès ! Veuillez vérifier votre boîte de réception pour le lien de réinitialisation.";
         } catch (error) {
